--- a/frontend/dashboard.css
+++ b/frontend/dashboard.css
@@ -232,9 +232,10 @@ footer{
 .footer-brand h1{
   font-size:64px;
   font-weight:700;
+  align-items:left;text-align:left;
   margin:0;
 }
-.footer-brand p{opacity:.85;font-size:15px;margin-top:4px;}
+.footer-brand p{opacity:.85;font-size:15px;margin-top:4px;  align-items:left;text-align:left;}
 .footer-links{
   display:flex;
   flex-direction:column;
@@ -248,21 +249,6 @@ footer{
 }
 .footer-links a:hover{opacity:1;transform:translateX(3px);}
 .footer-bottom{text-align:center;font-size:14px;opacity:.8;}
-
-footer .footer-container {
-  justify-content: space-between;
-  align-items: flex-start;
-  text-align: left;
-}
-
-footer .footer-brand,
-footer .footer-brand h1,
-footer .footer-brand p {
-  text-align: left;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-
 
 @media(max-width:768px){
   .title{font-size:48px;text-align:center}
