--- a/frontend/dashboard.css
+++ b/frontend/dashboard.css
@@ -521,9 +521,9 @@ footer {
   }
 
   #summaryText {
-    text-align: center;
+    text-align: left;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
   }
 
   .info svg, 
